[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/PlayableCharacters/CharacterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/SwampStage/Spider/spider3.png" type="Texture" id=2]
[ext_resource path="res://Script/Enemies/Spider.gd" type="Script" id=3]
[ext_resource path="res://Script/Enemies/SpiderStateMachine.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/SwampStage/Spider/spider4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/SwampStage/Spider/spider1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/SwampStage/Spider/spider2.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Enemies/DeathAnimation.tscn" type="PackedScene" id=8]



[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "running",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 6 )

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 2.5, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 10 )

[node name="Spider" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 10
script = ExtResource( 3 )

[node name="Body" parent="." index="0"]
position = Vector2( 0, -22 )

[node name="Sprite" parent="Body" index="0"]
position = Vector2( 0, 13.3956 )
frames = SubResource( 1 )
animation = "running"
playing = true

[node name="DeathAnimation" parent="Body" index="1" instance=ExtResource( 8 )]
visible = false

[node name="FloorRaycast" type="RayCast2D" parent="Body" index="2"]
position = Vector2( -10, 22 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 2, -6 )
shape = SubResource( 2 )

[node name="AnimationPlayer" parent="." index="2"]
anims/hurt = SubResource( 3 )

[node name="StateMachine" parent="." index="3"]
script = ExtResource( 4 )

[node name="CollideWithPlayer" type="Area2D" parent="." index="4"]
position = Vector2( 0, 7.3956 )
collision_layer = 4
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollideWithPlayer" index="0"]
position = Vector2( 0, -16.3956 )
shape = SubResource( 4 )
[connection signal="body_entered" from="CollideWithPlayer" to="." method="_on_CollideWithPlayer_body_entered"]
